--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -1955,8 +1955,6 @@ TOP:
 	# Dog gone Cool matches to process the rest of the config
 	/^tftp-server flash /   && next; # kill any tftp remains
 	/^ntp clock-period /    && next; # kill ntp clock-period
-	/^ length /		&& next; # kill length on serial lines
-	/^ width /		&& next; # kill width on serial lines
 	$lineauto = 1 if /^ modem auto/;
 	/^ speed / && $lineauto	&& next; # kill speed on serial lines
 	/^ clockrate /		&& next; # kill clockrate on serial interfaces
@@ -1976,6 +1974,8 @@ TOP:
 		last if (/^$prompt/);
 		goto TOP if (! /^ /);
 		next if (/\s*(rx|tx)speed \d+/);
+		next if (/^ length /);	# kill length on serial lines
+		next if (/^ width /);	# kill width on serial lines
 		if (/^(\s+password) \d+ / && $filter_pwds >= 1) {
 		    $_ = "! $1 <removed>\n";
 		}
