--- a/rancid/bin/hlogin.in
+++ b/rancid/bin/hlogin.in
@@ -530,8 +530,11 @@ proc run_commands { prompt command } {
 
     # Turn off the pager and escape regex meta characters in the $prompt
     send "no page\r"
-    regsub -all {[)(]} $prompt {\\&} reprompt
-    regsub -all {^(.{1,11}).*([#>])$} $reprompt {\1([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?} reprompt
+    # match cisco config mode prompts too, such as router(config-if)#
+    regsub -all {^(.{1,11}).*([#>])$} $prompt {\1} reprompt
+    # escape any parens in the prompt, such as "(enable)"
+    regsub -all {[)(]} $reprompt {\\&} reprompt
+    append reprompt {([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?}
     expect {
 	-re $reprompt	{}
 	-re "\[\n\r]+"	{ exp_continue }
