--- a/rancid/bin/mrvlogin.in
+++ b/rancid/bin/mrvlogin.in
@@ -527,11 +527,11 @@ proc run_commands { prompt command } {
     set in_proc 1
 
     send -h "terminal length 0\r"
+    # match cisco config mode prompts too, such as router(config-if)#
+    regsub -all {^(.{1,11}).*([#>])$} $prompt {\1} reprompt
     # escape any parens in the prompt, such as "(enable)"
-    regsub -all {[)(]} $prompt {\\&} reprompt
-    # match cisco config mode prompts too, such as router(config-if)#,
-    # but catalyst does not change in this fashion.
-    regsub -all {^(.{1,11}).*([#>])$} $reprompt {\1([^#>\r\n]+)?\2(\\([^)\\r\\n]+\\))?} reprompt
+    regsub -all {[)(]} $reprompt {\\&} reprompt
+    append reprompt {([^#>\r\n]+)?\2(\\([^)\\r\\n]+\\))?}
     expect {
 	-re $reprompt	{}
 	-re "\[\n\r]+"	{ exp_continue }
