Fix a problem where prompts, when truncated to deal with them changing in different modes, can end with '(' or '\' in the case of a prompt whose parens have already been escaped and is of just the right length, either truncate before escaping the parens or make sure the regex-prompt doesnt end with a '\'.

--- a/bin/clogin.in
+++ b/bin/clogin.in
@@ -636,7 +636,9 @@ proc run_commands { prompt command } {
     if { [string compare "extreme" "$platform"] } {
 	# match cisco config mode prompts too, such as router(config-if)#,
 	# but catalyst does not change in this fashion.
-	regsub -all {^(.{1,11}).*([#>])$} $prompt {\1([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?} reprompt
+	regsub -lineanchor -- {^(.{1,11}).*([#>])$} $prompt {\1} reprompt
+	regsub -all -- {[\\]$} $reprompt {} reprompt
+	append reprompt {([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?}
     } else {
 	set reprompt $prompt
     }
