--- a/bin/avologin.in
+++ b/bin/avologin.in
@@ -511,12 +511,13 @@ proc run_commands { prompt command } {
 
     # The pager cant be completely disabled
     send "stty rows 1024\r"
+
+    # match cisco config mode prompts too, such as router(config-if)#,
+    # but catalyst does not change in this fashion.
+    regsub -lineanchor -- {^(.{1,14}).*([#>])$} $prompt {\1} reprompt
     # escape any parens in the prompt, such as "(enable)"
-    regsub -all {[)(]} $prompt {\\&} reprompt
-# XXX
-# match cisco config mode prompts too, such as router(config-if)#,
-# but catalyst does not change in this fashion.
-regsub -all {^(.{1,14}).*([#>])$} $reprompt {\1([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?} reprompt
+    regsub -all {[)(]} $reprompt {\\&} reprompt
+    append reprompt {([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?}
     expect {
 	-re $reprompt	{}
 	-re "\[\n\r]+"	{ exp_continue }
