--- a/bin/tlogin.in
+++ b/bin/tlogin.in
@@ -575,11 +575,11 @@ proc run_commands { prompt command } {
 	} else {
 	    send "term length 0\r"
 	}
+	# match cisco config mode prompts too, such as router(config-if)#
+	regsub -all {^(.{1,14}).*([#>])$} $prompt {\1} reprompt
 	# escape any parens in the prompt, such as "(enable)"
-	regsub -all {[)(]} $prompt {\\&} reprompt
-	# match cisco config mode prompts too, such as router(config-if)#,
-	# but catalyst does not change in this fashion.
-	regsub -all {^(.{1,14}).*([#>])$} $reprompt {\1([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?} reprompt
+	regsub -all {[)(]} $reprompt {\\&} reprompt
+	append reprompt {([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?}
 	expect {
 	    -re $reprompt	{}
 	    -re "\[\n\r]+"	{ exp_continue }
