ciscowlc.pm: filter some config junk that wont import

--- a/lib/ciscowlc.pm.in
+++ b/lib/ciscowlc.pm.in
@@ -128,25 +128,33 @@ sub ShowConfig {
 
 	$linecnt++;
 
-        # remove snmp community string data
-        if (/^(\s*snmp community create)/ && $filter_pwds >= 1) {
-            ProcessHistory("","","","!$1 <removed>\n"); next;
-        }
-        if (/^(\s*snmp community accessmode (ro|rw))/ && $filter_pwds >= 1) {
-            ProcessHistory("","","","!$1 <removed>\n"); next;
-        }
-        if (/^(\s*snmp community ipaddr\s\S+\s\S+) / && $filter_pwds >= 1) {
-            ProcessHistory("","","","!$1 <removed>\n"); next;
-        }
+	# These can not be imported, so comment them
+	if (/^\s*service port.*/i) {
+	    ProcessHistory("","","","!$_"); next;
+	}
+	if (/^\s*wlan express setup.*/i) {
+	    ProcessHistory("","","","!$_"); next;
+	}
 
-        last if (/^$prompt/);
-        next if (/^(\s*|\s*$cmd\s*)$/);
+        # remove snmp community string data
+	if (/^(\s*snmp community create)/ && $filter_pwds >= 1) {
+	    ProcessHistory("","","","!$1 <removed>\n"); next;
+	}
+	if (/^(\s*snmp community accessmode (ro|rw))/ && $filter_pwds >= 1) {
+	    ProcessHistory("","","","!$1 <removed>\n"); next;
+	}
+	if (/^(\s*snmp community ipaddr\s\S+\s\S+) / && $filter_pwds >= 1) {
+	    ProcessHistory("","","","!$1 <removed>\n"); next;
+	}
+
+	last if (/^$prompt/);
+	next if (/^(\s*|\s*$cmd\s*)$/);
 
 	$linecnt++;
-        if (! /^$prompt/) {
+	if (! /^$prompt/) {
 	    print(STDERR "      ShowConfig Data: $_") if ($debug);
 	    ProcessHistory("","","","$_");
-        }
+	}
     }
     ProcessHistory("","","","\n!--WLC End Config Data--!\n");
     print STDERR "    Exiting ShowConfig: $_" if ($debug);
