--- a/rancid/bin/clogin.in
+++ b/rancid/bin/clogin.in
@@ -129,7 +129,7 @@ for {set i 0} {$i < $argc} {incr i} {
 	} -r* {
 	    if {! [regexp .\[rR\](.+) $arg ignore passphrase]} {
 		incr i
-		set vapassphrase [lindex $argv $i]
+		set avpassphrase [lindex $argv $i]
 	    }
 	# VTY Password
 	} -v* {
