--- a/rancid/lib/iosxr.pm.in
+++ b/rancid/lib/iosxr.pm.in
@@ -521,7 +521,6 @@ sub ShowEnv {
 	tr/\015//d;
 	if (/^$prompt/) { $found_env = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
-	#return(1) if ($type !~ /^7/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
 	return(0) if ($found_env);		# Only do this routine once
@@ -531,14 +530,15 @@ sub ShowEnv {
 	    $E0 = 1;
 	    ProcessHistory("COMMENTS","keysort","E0","!\n");
 	}
-	if (/^Arbiter type (\d), backplane type (\S+)/) {
-	    if (!defined($C0)) {
-		$C0 = 1; ProcessHistory("COMMENTS","keysort","C0","!\n");
+
+	if (/power budget summary for rack/i) {
+	    ProcessHistory("COMMENTS","keysort","E1","!Power: $_");
+	    while (<$INPUT>) {
+		tr/\015//d;
+		goto OUT if (/^$prompt/);
+		last if (/^altitude information/i);
+		ProcessHistory("COMMENTS","keysort","E1","!Power: $_");
 	    }
-	    ProcessHistory("COMMENTS","keysort","C1",
-		"!Enviromental Arbiter Type: $1\n");
-	    ProcessHistory("COMMENTS","keysort","A2",
-		"!Chassis type: $2 backplane\n");
 	    next;
 	}
 	/^Power Supply Information$/ && next;
@@ -552,6 +552,7 @@ sub ShowEnv {
 	/^\s*(RPS is .*)/i &&
 	    ProcessHistory("COMMENTS","keysort","E2","!Power: $1\n") && next;
     }
+OUT:
     ProcessHistory("COMMENTS","","","!\n");
     return(0);
 }
