Replace autoconf vars copyright & login_top with file contents.

--- a/configure.ac
+++ b/configure.ac
@@ -458,6 +458,10 @@ extern int		errno;
 ])
 AC_CONFIG_HEADERS(include/config.h)
 
+AC_SUBST_FILE([copyright login_top])
+copyright=$srcdir/COPYING
+login_top=$srcdir/bin/login_top.in
+
 AC_CONFIG_FILES(bin/control_rancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/agmrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/alogin bin/arancid, [chmod a+x $ac_file])
