control_rancid: fix handling of <group>/rancid.conf in git - Mike Eklund (HEAD and v3.2)

--- a/bin/control_rancid.in
+++ b/bin/control_rancid.in
@@ -236,6 +236,7 @@ if [ -f rancid.conf ] ; then
 	;;
     git )
 	git status -s rancid.conf | grep '^?'
+	if [ $? -eq 0 ] ; then LN=1; else LN=0; fi
         ;;
     esac
     if [ $LN -eq 0 ] ; then
